--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ env:
   - DRAKE_URL="https://drake-packages.csail.mit.edu/drake/nightly/drake-latest-xenial.tar.gz"
 
 install:
-  - docker build -t test --build-arg DRAKE_URL=$DRAKE_URL .
+  - python docker_build.py --drake_url=$DRAKE_URL
 
 script:
-  - docker run --name test test
+  - python docker_run.py -e /pydrake_kuka/run_tests.sh
